--- a/ServiceCenter-Tools/AdminAppLauncher/WIP/appconfig.json
+++ b/ServiceCenter-Tools/AdminAppLauncher/WIP/appconfig.json
@@ -25,7 +25,7 @@
   },
   {
     "Nickname": "CompMgmt",
-    "Group": "",
+    "Group": null,
     "Delay": 0,
     "Path": "C:\\Windows\\System32\\compmgmt.msc"
   },
